--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
  </head>
  <body>
 <h1>IOS</h1>
-  <a href="itms-services://?action=download-manifest&url=https://api.diawi.com/app-manifest/mOesytFwaYQTVqPJReEy.plist">Visit IOS!</a>
+  <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/diendh/updateIos/master/ios.plist">Visit IOS!</a>
 </body></html>
